[workspace]
members = [
    "core",
    "chain/*",
    "graphql",
    "mock",
    "node",
    "runtime/wasm",
    "runtime/derive",
    "runtime/test",
    "server/http",
    "server/json-rpc",
    "server/index-node",
    "server/metrics",
    "store/postgres",
    "store/test-store",
    "graph",
    "tests",
    "fbthrift-transport",
    "response-handler",
    "interface/common",
    "interface/graph",
    "interface/meta",
    "interface/storage",
    "nebula-rust",
]

# Incremental compilation on Rust 1.58 causes an ICE on build. As soon as graph node builds again, these can be removed.
[profile.test]
incremental = false

[profile.dev]
incremental = false
